commit change gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+Thumbs.db*
+.DS_Store
+HELP.md
 .gradle
 build/
 
@@ -28,6 +31,7 @@ out/
 .vscode/
 
 ### Package Files ###
+*.jar
 *.war
 *.nar
 *.ear
@@ -36,5 +40,6 @@ out/
 *.rar
 
 ### Exclusions ###
+!gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
 !**/src/test/**
